Minor changes to Chapter 5 on forcing, added a section on Aerosol forcing.

--- a/Course_notes_latex/Climate_dynamics_course_notes.tex
+++ b/Course_notes_latex/Climate_dynamics_course_notes.tex
@@ -634,6 +634,7 @@ A not negligible part of the water vapor feedback of about 20-30 percent, howeve
 % Show a figure with Clausius-Clapeyron, argue that the warming of parcels moving from the upper troposphere to the lower is larger in a warmer climate, hence a slight reduction in RH
 
 \subsection{Cloud feedbacks}
+\label{sec:cloud_feedback}
 Clouds are exceptionally complicated, and it would be foolish to even try to account for the many different ways in which clouds could possibly feed back on the Earth's energy balance. And not only are the mechanisms complex and difficult to grasp, they are also the main source of uncertainty in quantifying climate change and clouds impact the strength of other feedback mechanisms as we have seen above in the example of surface albedo feedback. Therefore, cloud feedbacks are very much central to the part of climate sciences that aims at estimating Earth's climate sensitivity. Because it is so complicated, one current trend is to dissect the cloud feedback into separate regimes (Figure \ref{fig:cloud_feedback_illustration}) wherein the hope is that the individual mechanisms can be understood and quantified. It is not at all clear that this is the most effective way to achieve overall progress, though, and climate scientists also pursue other routes to determining cloud feedback. 
 Current thinking is that it is useful to divide cloud feedback into three groups:
 \begin{itemize}
@@ -949,33 +950,35 @@ Plot the result and verify your inference from the previous exercise.
 The climate system can be forced in a number of ways, and previously we have taken the concept of external forcing from a doubling of atmospheric CO$_2$ for granted. But what we mean by external forcing is not always obvious. The first thing we need to do is to define the system we are looking at. Often we think of the physical properties of the system: the temperature, humidity, clouds and surface albedo, whereas other components such as the solar constant or the atmospheric CO$_2$ are considered as "given" external boundary conditions. Feedbacks are then those internal processes within the system that respond to changes in the external boundary conditions in ways that achieves a new balanced climate. 
 
 But even some of those internal processes may not respond in concert with the surface temperature: we have already looked at the sluggish deep ocean in the previous chapter, but also ice sheets may take millennia to equilibrate with a new climate, and vegetation may react to changes in boundary conditions such as CO$_2$ or sunlight over long timescales. In a later chapter we shall develop a way to handle the possible impact of the slow deep ocean adjustment process as a time-dependent feedback. 
-Also at short timescales -- and this is what we shall investigate here -- things can change in ways that do not depend directly on the temperature. We shall see below how the stratosphere cools off rapidly, within weeks, after an increase in CO$_2$ which is a consequence of the increased emissivity allowing it to cool more effectively. But also clouds may respond to atmospheric composition changes, actually within hours, well before the surface temperature has had time to respond.
+Also at short timescales -- and this is what we shall investigate here -- things can change in ways that do not depend directly on the temperature. We shall see below how the stratosphere cools off rapidly, within weeks, after an increase in CO$_2$ which is a consequence of the increased emissivity allowing it to cool more effectively. But also clouds may respond to atmospheric composition changes in multiple ways, actually within seconds to hours, well before the global mean surface temperature has had time to respond.
 
 \vspace{0.5 cm}
 \noindent
-When trying to separate {\bf feedback} from {\bf forcing} I find it useful to think of the responses that impact the radiation balance as to whether, or not, they depend physically on the surface temperature. The increase in water vapor depends mostly on the surface temperature, hence it is a feedback, but in other cases it may not be so straightforward. Therefore we often resort to a more ad-hoc definition by dividing the problem into time-scales. We call things that happen well within the first year after a forcing is applied {\bf fast adjustments} and those that happen in congruence with surface temperature we define as {\bf feedbacks}. Finally, those that involve long timescales are often referred to as slow- or time-dependent feedbacks. It is often quite challenging to separate these effects. 
+When trying to separate {\bf feedback} from {\bf forcing} I find it useful to think of the responses that impact the radiation balance as to whether, or not, they depend physically on the surface temperature. For instance, the increase in water vapor depends mostly on the temperature, hence it is a feedback, but in other cases it may not be so straightforward. Therefore we often resort to a more ad-hoc definition by dividing the problem into time-scales. We call things that happen well within the first year after a forcing is applied {\bf fast adjustments} and those that happen in congruence with surface temperature we define as {\bf feedbacks}. Finally, those that involve long timescales are often referred to as {\bf slow- or time-dependent} feedbacks. It is, however, often quite challenging to separate these effects. 
 %A clear short-coming of this division occurs for vegetation which may respond to purely the CO$_2$ fertilization, but over long timescales. 
 
-\vspace{0.5 cm}
-\noindent
+\section{Solar forcing}
 To be a little more concrete, let's take the perhaps simplest case of an abrupt but small change in the solar constant, $\delta S_o$. We may now perturb our energy balance equation \ref{eq:black_body_energy_balance} for the black body Earth and assume the planetary albedo stays constant:
 $$ N+\delta N \approx \frac{S_o+\delta S_o}{4}(1-\alpha) - \sigma (T_e+\delta T)^4 $$
-Now, the system was in balance before the abrupt change, so $N=0$ and initially $\delta T=0$, such that we can estimate the change in the radiation balance induced by the change in solar constant:
+Now, the system was in balance before the abrupt change, so $N=0$, and initially as the change in solar constant is applied we still have $\delta T=0$, such that we can estimate the change in the radiation balance induced by the change in solar constant:
 $$ \delta N(t=0) \approx \frac{\delta S_o}{4}(1-\alpha).$$
 We can think of this initial change in the radiation balance as the forcing, $F$. Traditionally, climate modelers apply a 2 percent increase in the solar constant, giving $F_{2pct}\approx 4.8$ Wm$^{-2}$ which is close to that of a doubling of CO$_2$, $F_{2x}\approx 3.7$ Wm$^{-2}$. 
 
-We may, however, imagine things could happen on a short timescale that are not congruent with the surface temperature response to the solar forcing. The first is that some of the extra sunlight will be absorbed by ozone in the stratosphere, and because the stratosphere has a low heat capacity and is not dynamically coupled to the surface it can quickly warm up, as it turns out in matter of weeks. The warmer stratosphere will radiate more infrared radiation both down towards the surface and up to space, the latter resulting in a weakening of $F_{2pct}$ by some amount. Second, clouds might respond to the stronger solar input thereby altering the planetary albedo. This will result in an adjustment term $-\delta \alpha \cdot S_o/4$, meaning that even minute changes in $\alpha$ can have relatively large impacts on the adjusted $F_{2pct}$.
+We may, however, imagine things could happen on a short timescale that are not congruent with the surface temperature response to the solar forcing. The first is that some of the extra sunlight will be absorbed by ozone in the stratosphere, and because the stratosphere has a low heat capacity and is not dynamically coupled to the surface it can quickly warm up. The warmer stratosphere will radiate more infrared radiation both down towards the surface and up to space, the latter resulting in a weakening of $F_{2pct}$ by some small amount. 
+
+Second, clouds could respond to the stronger solar input thereby altering the planetary albedo. From our everyday experience it seems plausible that cloudiness is tied to sunlight: fair weather cumulus clouds form in summer over land in the afternoon, deep convective thunderstorms occasionally in the late afternoon or evening. But perhaps more significant here, low-level stratiform clouds (fog, stratus, stratocumulus) tend to thin or dissipate when exposed to sunlight. 
+Such  changes in cloudiness can result in an adjustment term $-\delta \alpha \cdot S_o/4$, or 3.4 Wm$^{-2}$ per percent change in $\alpha$. Thus, even minute changes in $\alpha$ can have substantial impacts on the adjusted $F_{2pct}$.
 
 \vspace{0.5 cm}
 \noindent
-In the following we shall go over two methods to estimate forcing, and then take a closer look at the forcing from CO$_2$. There are of course many other ways the Earth system can be forced, some of which we shall look at in the next chapter in the context of historical warming. 
+In the following we shall go over two methods to estimate forcing, and then take a closer look at the forcing from CO$_2$. There are of course many other ways the Earth system can be forced, some of which we shall look at in a later chapter in the context of historical warming. 
 
 \section{The Gregory- and the Hansen methods}
-There are many ways to estimate the radiative forcing in climate models. Here I will go over the two methods that are most widely used today namely those suggested by Gregory et al. (2004) and Hansen et al. (2005). Both methods build on the idea of the linear framework we developed earlier wherein the energy balance is a function of forcing and feedback:
+There are many ways to estimate the radiative forcing in climate models. Here I will go over the two practical methods that are most widely used today namely those suggested by Gregory et al. (2004) and Hansen et al. (2005). Both methods build on the idea of the linear framework we developed earlier wherein the energy balance is a function of forcing and feedback:
 $$N=F+\lambda T$$
 where $F$ and $\lambda$ are assumed to be constants. 
 
-The Gregory-method builds on coupled climate simulations wherein CO$_2$, or any other forcing is abruptly applied whereafter the system slowly warms. Then the parameters $F$ and $\lambda$ can be determined by linear regression of $N$ versus $T$. The best way to see this is to plot yearly mean values of the imbalance as a function of global mean surface temperature change (Figure \ref{fig:gregory_hansen}). Note that in the figure I show a case with quadrupled CO$_2$, or two doublings, rather than the usual single doubling of CO$_2$. The radiative forcing from CO$_2$ is roughly logarithmic in the concentration (Arrhenius 1896) and so if we divide the forcing estimate by two we get an estimate of that from a single doubling. Using 4xCO$_2$, rather than 2xCO$_2$, is popular in the climate modeling community as it increases the ratio of the forced signal over internal variability (noise) when trying to fit simple models to the results, such as we do here. By applying a larger forcing, however, we also risk activating non-linearities that again makes interpretation more difficult.
+The Gregory-method builds on coupled climate simulations wherein CO$_2$, or any other forcing for that matter, is abruptly applied whereafter the system slowly warms. Then the parameters $F$ and $\lambda$ can be determined by linear regression of $N$ versus $T$. The best way to see this is to plot yearly mean values of the imbalance as a function of global mean surface temperature change (Figure \ref{fig:gregory_hansen}). Note that in the figure I show a case with quadrupled CO$_2$, or two doublings, rather than the usual single doubling of CO$_2$. The radiative forcing from CO$_2$ is roughly logarithmic in the concentration (Arrhenius 1896) and so if we divide the forcing estimate by two we get an estimate of that from a single doubling. Using 4xCO$_2$, rather than 2xCO$_2$, is popular in the climate modeling community as it increases the ratio of the forced signal over internal variability (noise) when trying to fit simple models to the results, such as we do here. By applying a larger forcing, however, we also risk activating non-linearities that again makes interpretation more difficult.
 
 \begin{figure}[!]
 \begin{center}
@@ -985,17 +988,17 @@ The Gregory-method builds on coupled climate simulations wherein CO$_2$, or any 
 \label{fig:gregory_hansen}
 \end{figure}
 
-As we expect for the system to be stable (Chapter 3) the slope of the linear fit is negative; we can identify the slope as the feedback parameter, $\lambda \approx -1.2$ Wm$^{-2}$K$^{-1}$. The intercept with the y-axis, i.e. where $T=0$ can then be interpreted as the forcing, $F$. With this method we find an estimate of $F_{4x} \approx 7.34$ Wm$^{-2}$, corresponding to $F_{4x} \approx 3.67$ Wm$^{-2}$ which is not far from our canonical value of 3.7 Wm$^{-2}$. This close agreement, as it shall turn out, is purely coincidental.
+As we expect for the system to be stable (Chapter 3) the slope of the linear fit is negative; we can identify the slope as the feedback parameter, $\lambda \approx -1.2$ Wm$^{-2}$K$^{-1}$. The intercept with the y-axis, i.e. where $T=0$ can then be interpreted as the forcing, $F$. With this method we find an estimate of $F_{4x} \approx 7.34$ Wm$^{-2}$, corresponding to $F_{2x} \approx 3.67$ Wm$^{-2}$ which is not far from our canonical value of 3.7 Wm$^{-2}$. This apparent agreement, as it shall turn out, is purely coincidental.
 
-Hansen et al. (2005) took a somewhat different approach. They suggested using simulations with atmosphere-only models, wherein the sea surface temperature is held fixed, so as to not allow the system to warm. Often these are referred to as AMIP experiments. One will make two simulations, a control and one with a forcing applied, for instance increased CO$_2$. If $T=0$ we simply have that the forcing equals the change in the radiation imbalance. Unfortunately -- or perhaps fortunately -- the whole Earth is not covered only by ocean, and so the land and sea ice covered regions can change their temperatures in response to the changed atmospheric composition. This alters the global mean surface temperature a little bit, for a quadrupled CO$_2$ concentration approximately by 0.5 K. We can write this as:
+Hansen et al. (2005) took a somewhat different approach to estimating forcing in models. They suggested using simulations with atmosphere-only models, wherein the sea surface temperature is held fixed, so as to not allow the system to warm in response to a change in boundary conditions. Often these are referred to as AMIP experiments. One will make two simulations, a control and one with a forcing applied, for instance increased CO$_2$. If $T=0$ we simply have that the forcing equals the change in the radiation imbalance between the two experiments. Unfortunately -- or perhaps fortunately -- the whole Earth is not covered by ocean. The land and sea ice covered regions can change their temperatures in response to the changed atmospheric composition. This alters the global mean surface temperature a little bit, for a quadrupled CO$_2$ concentration approximately by 0.5 K. We can write this as:
 $$F = N -\lambda \delta T$$
 where $N$ is determined from the difference between the two runs, $\delta T$ is the small change in surface temperature and $\lambda$ is taken to be the longterm average slope as determined using the Gregory-method. In figure \ref{fig:gregory_hansen} I display the Hansen method estimate with the red line, yielding $F_{4x} \approx 9.2$ Wm$^{-2}$, corresponding to $F_{2x} \approx 4.6$ Wm$^{-2}$, or a substantially larger value than found with the Gregory et al. (2004) method.
 
-The two methods can be brought into agreement by relaxing the requirement that $\lambda$ is constant. We note that the first few years the imbalance is somewhat above the longterm mean fitted line. If we fit a line to just the first 10 years we see that the slope is substantially steeper with $\lambda \approx -1.8$ Wm$^{-2}$K$^{-1}$ and an intercept close to that obtained with the Hansen-method. 
-We shall return to the interesting causes and implications of $\lambda$ not being a constant at several later occasions, however already below we shall see that it has something to do with clouds.
+The two methods can be brought into agreement by relaxing the requirement that $\lambda$ is constant. We note that the first few years the imbalance is somewhat above the longterm mean fitted line. If we fit a line to just the first 10 years we see that the slope is substantially steeper with $\lambda \approx -1.8$ Wm$^{-2}$K$^{-1}$ and has an intercept close to that obtained with the Hansen-method. 
+We shall return to the interesting causes and implications of $\lambda$ not being a constant at several later occasions, however, already below we shall see that it has something to do with clouds.
 
 \section{Components of the radiative forcing from CO$_2$}
-So far we have focussed on the total forcing from e.g. an increase in atmospheric CO$_2$. But it is useful to also separate them out to better appreciate how the forcing comes about. Here we note that we can separate the total imbalance change into contributions from CO$_2$ itself, as well as temperature, water vapor, clouds and surface albedo, and we shall then assume they are linear in global mean surface temperature change:
+So far we have focussed on the total forcing from e.g. an increase in the solar constant or the atmospheric CO$_2$, and we have discussed loosely the adjustments that might occur. Here we shall formalize this a bit more by assuming that we  can separate the total imbalance change into contributions from CO$_2$ itself, as well as temperature, water vapor, clouds and surface albedo, and we shall then assume each of them are linear in global mean surface temperature change such that:
 \begin{eqnarray}
 N &\approx& \sum{ N_i}     \label{eq:prp} \\
  &\approx&  N_{CO_2} +  N_{T} +  N_{W}  +  N_{C}  +  N_{A} \nonumber  \\
@@ -1015,7 +1018,7 @@ In Figure \ref{fig:mpi-esm1.2_PRP} I plot all the terms in equation \ref{eq:prp}
 \label{fig:mpi-esm1.2_PRP}
 \end{figure}
 
-Non-zero y-intercepts are found for temperature ($N_T$) clouds ($N_C$) and the direct CO$_2$ forcing ($F^*$). In MPI-ESM1.2 roughly half of the total forcing is due to $F^*$ itself, whereas fast temperature and cloud adjustments contribute nearly equal amounts. The direct forcing can be understood from our considerations in Chapter 2 where we argued that increasing the emissivity of the atmosphere reduces the infrared radiation to space because the atmosphere is, for the most part, colder than the surface. Next, we will try to understand the other two components.
+Non-zero y-intercepts are found for temperature ($F_T$) clouds ($F_C$) and the direct CO$_2$ forcing ($F^*$). In MPI-ESM1.2 roughly half of the total forcing is due to $F^*$ itself, whereas fast temperature and cloud adjustments contribute nearly equal amounts. The direct forcing can be understood from our considerations in Chapter 2 where we argued that increasing the emissivity of the atmosphere reduces the infrared radiation to space because the atmosphere is for the most part colder than the surface. Next, we will try to understand the other two components.
 
 \subsection{Stratospheric adjustment to CO$_2$}
 The initial positive contribution to the radiation balance by temperature (Figure \ref{fig:mpi-esm1.2_PRP}) may seem puzzling at first. Actually, the only way this can happen is if a part of the climate system cools in response to the increase in CO$_2$; this happens to be the stratosphere. To show this, I plot global mean temperature profiles from the two simulations with prescribed sea surface temperatures that we used to estimate forcing with the Hansen et al. (2005) method above. We see how the tropospheric temperature is hardly changed, but the stratosphere is around 10-15 K colder in the case with quadrupled CO$_2$ and the stratopause and mesosphere are even colder. 
@@ -1032,7 +1035,7 @@ A cooling stratosphere can also be observed on Earth and in the period of about 
 
 The stratosphere is primarily in a radiative equilibrium between sunlight absorbed by oxygen and ozone and a net heat loss of infrared radiation. The stratosphere receives some infrared radiation from lower levels, but looses more through emission so that the net is negative.
 As we saw in Chapter \ref{chapter:essentials} the infrared emissivity of the stratosphere is controlled mostly by CO$_2$, ozone and very small amounts of water vapor. In an exercise we saw how the infrared spectrum changes a bit around the regions where CO$_2$ and ozone are absorbing depending on whether we observe from 70 km or 18 km height, but even so the changes were not dramatic. Already here we can infer that the stratosphere is very far from an ideal black body, $\epsilon_s \ll 1$, as it is transparent to most of the infrared radiation from lower levels. 
-As the CO$_2$ concentration is increase the stratospheric emissivity, $\epsilon_s$, is also increased and so the stratosphere can cool more readily in the infrared. 
+As the CO$_2$ concentration is increased the stratospheric emissivity ()$\epsilon_s$) is also increased and so the stratosphere can cool more readily in the infrared. 
 
 \begin{figure}
 \begin{center}
@@ -1062,11 +1065,11 @@ It is left as an exercise to show that the response time after a quadrupling of 
 
 We can see this process happening in a model in Figure \ref{fig:stratospheric_adjustment_timeseries}. Initially there is more downward flux going out below the stratosphere (200 hPa) than is coming in at the top of the atmosphere. As the stratosphere cools off this radiation deficit is reduced. The flux at 200 hPa is actually quite close to the longterm mean at the top of the atmosphere right from the start. Therefore climate modelers have often in the past used this level to estimate the forcing that will occur after the stratospheric adjustment period. It is, however, problematic to use a fixed pressure level when the tropopause moves up and so nowadays we usually use the Hansen et al. (2005) method to estimate radiative forcing after adjustment. 
 
-In summary, the stratosphere adjusts it's temperature quickly thereby enhancing the radiative forcing from CO$_2$. This is the very foundation of the division we made of the total temperature feedback in Chapter \ref{chapter:response} into the tropospheric Planck and lapse-rate feedbacks, and separate out stratospheric adjustment as a forcing (Figure \ref{fig:planck_LR}). We can see how well this works in MPI-ESM1.2 in Figure \ref{fig:mpi-esm1.2_PRP_temperatures} where we see that the stratospheric contribution to the radiation balance has the intercept at around 3 Wm$^{-2}$ and nearly zero slope, i.e. zero feedback parameter. The Planck and lapse-rate components have practically zero y-intercept, that is do not contribute to forcing, but substantial slopes and are hence asserting strong feedbacks.
+In summary, the stratosphere adjusts it's temperature quickly thereby enhancing the radiative forcing from CO$_2$. This fast stratospheric adjustment is the very foundation of the division we made of the total temperature feedback in Chapter \ref{chapter:response} into the tropospheric Planck and lapse-rate feedbacks, and separate out stratospheric adjustment as a forcing (Figure \ref{fig:planck_LR}). We can see how well this works in MPI-ESM1.2 in Figure \ref{fig:mpi-esm1.2_PRP_temperatures} where we see that the stratospheric contribution to the radiation balance has the intercept at around 3 Wm$^{-2}$ and nearly zero slope, i.e. zero feedback parameter. The Planck and lapse-rate components have practically zero y-intercept, and so do not contribute to forcing, but do exhibit substantial slopes and are hence both asserting strong negative feedbacks.
 
 
 \subsection{Cloud adjustments to CO$_2$}
-Less than a decade ago Gregory and Webb (2008) found that in addition to the stratosphere also clouds can add to the forcing through fast adjustment processes; that is, in some respects clouds respond directly to a change in CO$_2$. Before this time climate scientists would run their models to equilibrium and assume that all changes to the clouds were temperature-dependent feedbacks. 
+Less than a decade ago Gregory and Webb (2008) found that, in addition to the stratospheric adjustment, also clouds can add to the forcing through fast adjustment processes; that is, in some respects clouds respond directly to a change in CO$_2$. Before this time climate scientists would run their models to equilibrium and assume that all changes to the clouds were temperature-dependent feedbacks. 
 
 \begin{figure}[!]
 \begin{center}
@@ -1076,7 +1079,7 @@ Less than a decade ago Gregory and Webb (2008) found that in addition to the str
 \label{fig:cloud_cover_adjustment}
 \end{figure}
 
-We have already seen that in MPI-ESM1.2 -- depending how one counts -- more than half the total change in the radiation balance originating from clouds happens quickly, well within the first year (Figure \ref{fig:mpi-esm1.2_PRP}). We can investigate this fast adjustment using the same experiments that we used in the  Hansen et al. (2005) method. The quadrupled CO$_2$ induces a reduction in global mean total cloud cover of about one percent but large regional deviations occur (Figure \ref{fig:cloud_cover_adjustment}). We see that over most of the oceans, whereat the surface temperature is held fixed, there is a nearly general reduction in cloudiness. Over some land-regions, mostly those associated with monsoons, there is an increase in cloudiness. In the following we shall make qualitative reasoning as to why these two counteracting phenomena occur.
+We have already seen that in MPI-ESM1.2 -- depending how one counts -- more than half the total change in the radiation balance originating from clouds happens quickly, well within the first year (Figure \ref{fig:mpi-esm1.2_PRP}). We can investigate this fast adjustment using the same experiments that we used in the  Hansen et al. (2005) method. The quadrupled CO$_2$ induces a reduction in global mean total cloud cover of about one percent but large regional deviations occur (Figure \ref{fig:cloud_cover_adjustment}). We see that over most of the oceans, whereat the surface temperature is held fixed, there is a average reduction in cloudiness. Over some land-regions, mostly those associated with monsoons, there is an increase in cloudiness. In the following we shall make qualitative reasoning as to why these two counteracting phenomena occur.
 
 \begin{figure}
 \begin{center}
@@ -1086,29 +1089,50 @@ We have already seen that in MPI-ESM1.2 -- depending how one counts -- more than
 \label{fig:stratocumulus_dynamics}
 \end{figure}
 
-A large class of clouds, in particular over the oceans, are stratiform in nature. The best known is sub-tropical low-level stratocumulus. These are caused by radiative longwave cooling at the cloud-top that cause condensation and convective mixing (Figure \ref{fig:stratocumulus_dynamics}). They mostly occur below a temperature inversion and usually the troposphere above is dry and relatively clear. Under such conditions the cloud-top cooling is particularly strong. In case-studies one can find how stratocumulus thin when a cloud passes by aloft; the upper cloud radiates down towards the stratocumulus thereby reducing the cloud-top cooling. The same phenomenon happens when we increase the atmospheric CO$_2$: the down-welling infrared radiation near cloud top increases due to the higher emissivity of the atmosphere thereby reducing the net cooling. The result is a reduction in this type of clouds within a matter of minutes to hours.
+A large class of clouds, in particular over the oceans, are stratiform in nature. The best known is sub-tropical low-level stratocumulus. These are caused by radiative longwave cooling at the cloud-top that cause condensation and convective mixing (Figure \ref{fig:stratocumulus_dynamics}). They mostly occur below a temperature inversion and usually the troposphere above is dry and relatively clear. Under such conditions the cloud-top cooling is particularly strong. In case-studies one can find how stratocumulus thin when a cloud passes by aloft; the upper cloud radiates down towards the stratocumulus thereby reducing the longwave cloud-top cooling. Analogously, low-level stratiform clouds tend to thicken during night and thin or dissipate during day as solar heating counteracts the longwave cooling.
+
+The same phenomenon happens when we increase the atmospheric CO$_2$: the down-welling infrared radiation near cloud top increases due to the higher emissivity of the atmosphere thereby reducing the net cooling. The result is a reduction in this type of clouds within a matter of minutes to hours. From Figure \ref{fig:cloud_cover_adjustment} we infer an order of 1 percent reduction in cloud cover over most of the oceans in response to quadrupled CO$_2$. Assuming a 70 percent ocean coverage, 0.5 local planetary albedo reduction we obtain a cloud adjustment of +1.2 Wm$^{-2}$ to quadrupled CO$_2$, or half of that to a single doubling. This back-of-envelope estimate explains a large part of the difference between the canonical 3.7 Wm$^{-2}$ and the MPI-ESM1.2 models actual forcing of 4.6 Wm$^{-2}$. 
 
 \begin{figure}
 \begin{center}
 \includegraphics[width=9 cm]{../illustrations/Land_sea_breeze_CO2_illustration.pdf}
 \end{center}
-\caption{ Illustration of the monsoon-circulation cloud adjustment to increased CO$_2$. } 
+\caption{ Illustration of the monsoon-circulation cloud adjustment to increased CO$_2$: an increase in the temperature contrast between land and ocean following an increase in atmospheric CO$_2$ will lead to a direct thermal cell with rising motion over land and subsidence over the oceans. } 
 \label{fig:landseabreeze}
 \end{figure}
 
-Some tropical land regions see instead increased cloudiness in response increased CO$_2$ in MPI-ESM1.2 (Figure \ref{fig:cloud_cover_adjustment}). They occur over the major monsoon regions, with the notable exception of the Amazon (probably a model bias), ranging from a few up to 10 percent increase in cloud cover over parts of Africa, the Middle East, Australia etc. I believe the reason is that land warms up faster than the ocean (in this simulation the ocean cannot warm), which causes an increased land-sea temperature contrast that drives stronger monsoon circulations (Figure \ref{fig:landseabreeze}). The result is more deep clouds forming over most of tropical lands, in particular upper-level ice clouds.
+Some tropical land regions see instead increased cloudiness in response increased CO$_2$ in MPI-ESM1.2 (Figure \ref{fig:cloud_cover_adjustment}). They occur over the major monsoon regions, with the notable exception of the Amazon (probably a model bias), ranging from a few up to 10 percent increase in cloud cover over parts of Africa, the Middle East, Australia etc. I believe the reason is that land warms up faster than the ocean (in this simulation the ocean cannot warm), which causes an increased land-sea temperature contrast that drives stronger monsoon circulations (Figure \ref{fig:landseabreeze}). The result is more deep clouds forming over most of tropical lands, in particular upper-level ice clouds. Deep clouds have a near-zero impact on the radiation balance because they both reflect sunlight and at the same time reduce infrared radiation to space.
 
-Cloud adjustments to CO$_2$ are the main source of uncertainty in radiative forcing from CO$_2$. If it wasn't for clouds we would know $F_{2x}$ with very high accuracy, some cite 3.72 Wm$^{-2}$, but clouds introduce model uncertainty of 10-20 percent. 
-
-
-%\section{Aerosol forcings}
+Cloud adjustments to CO$_2$ are the main source of uncertainty in radiative forcing from CO$_2$. If it wasn't for clouds we would know $F_{2x}$ with very high accuracy, some cite 3.72 Wm$^{-2}$, but clouds introduce model uncertainty of around 20 percent, and MPI-ESM1.2 with its forcing of 4.6 Wm$^{-2}$ is at the upper end when it comes to CO$_2$ forcing.
 
 
+\section{Aerosol forcings}
+Whereas cloud adjustments may play relatively minor roles in determining the forcing from solar constant or CO$_2$ changes, they are decisive in determining the strength of the forcing arising from atmospheric aerosol particles. In fact, there is no shortage of proposed mechanisms in which this may proceed (Figure \ref{fig:ar4aerosols}), as is usually symptomatic when we discuss clouds (Section \ref{sec:cloud_feedback}). 
+
+\begin{figure}
+	\begin{center}
+		\includegraphics[width=\textwidth]{../external_figures/AR4_aerosol_effects}
+	\end{center}
+	\caption{ Illustration of different proposed pathways in which aerosol particles may affect the radiation balance. The figure is from the fourth IPCC assessment report. } 
+	\label{fig:ar4aerosols}
+\end{figure}
+
+Let us however start with the direct impact of aerosols, sometimes referred to as the 'aerosol direct effect' or 'aerosol radiation interactions'. Aerosols can either scatter or absorb sunlight to different degrees depending on their physical properties. By scattering the incoming sunlight that hits the aerosol, photons are sent off course, predominantly in the backwards direction. Therefore, some of the incoming radiation is returned to space, and hence scattering aerosols cool the Earth. Aerosols, may also absorb the photons and thereby warm up the air that surrounds them. To be a positive forcing on the Earth system it is, however, necessary that the photon would have otherwise been reflected to space. Therefore absorbing aerosols that float over dark surfaces, such as the open ocean or dense forests, have nearly no positive forcing. But if above a bright surface such as a snow, ice or deserts, or overlaying a cloud, absorbing aerosols can exert a small positive forcing. Sometimes overlooked, aerosols may further absorb infrared radiation, thus exerting a small greenhouse effect. The total aerosol direct effect caused by human emissions relative to pre-industrial times is thought to be around -0.4 Wm$^{-2}$.
+
+Aerosols are also an important ingredient in clouds; something that you will learn more about in a cloud physics class. In fact, if there were no aerosols around the skies would look very different from what they do today. In order for a cloud droplet to form, it is very helpful to have a particle to start with upon which the water molecules can condense. These are a subset of the aerosol particles that have sufficient size and chemical properties, known as cloud condensation nuclei (CCN). There are typically 10-100 such CCN per cubic centimeter of air, sometimes more in polluted regions, whereas in very clean conditions there can be less than 1. We refer to the impacts of aerosol changes affecting clouds which in turn affect the radiation balance as 'aerosol indirect effects' or 'aerosol-cloud interactions'. 
+
+If we add more CCN to clouds then it is plausible that these clouds will contain more cloud droplets ($N$), in some relation to the increase of CCN, all other things being equal. If the water content in the cloud is the same, i.e. the volume $V=4/3 \pi r^3$, then it must be distributed over more abundant droplets, that as a result will be smaller in size. From a radiation perspective, however, what matters to first order is the cloud droplet cross section area, $A=\pi r^2$, which scale with the square of the droplet radius. We can estimate the relative increase in cross section area between two cases by noting that $V_1=V_2$:
+\begin{eqnarray}
+\frac{A_2}{A_1} &=& \frac{N_2}{N_1}  \frac{\pi r_2^2}{\pi r_1^2} \nonumber \\
+ &=& \frac{N_2}{N_1}  \left( \frac{N_1}{N_2} \right)^\frac{2}{3} \nonumber \\
+ &=& \left( \frac{N_2}{N_1} \right)^\frac{1}{3}, \nonumber 
+\end{eqnarray}
+and thus, the cross-section area is expected to rise slowly with increasing aerosol loading. This is known as the Twomey-effect, and is currently thought to roughly double the aerosol cooling caused by anthropogenic emissions. There is a multitude of additional proposed effects which could both warm and cool the Earth (Figure \ref{fig:ar4aerosols}), but which have fairly little quantitative evidence speaking to them. We shall return to the significance of the associated uncertainty of aerosol forcing as we discuss historical warming.
 
 \newpage
 \vspace{1 cm}
 {\setlength{\parindent}{0cm}
-\hrule
+%\hrule
 
 
 
